Fix logout method for Render

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,9 @@
-<div>
-<h1 class="text-red-500">Lunch de NiceShot</h1>
-<p>〜“勝ち飯”が、次のナイスショットを呼ぶ〜</p>
+<div class="text-center mt-10 space-y-4">
+  <h1 class="text-3xl font-bold text-green-700">
+    Lunch de NiceShot
+  </h1>
+
+  <p class="text-blue-500">
+    〜“勝ち飯”が、次のナイスショットを呼ぶ〜
+  </p>
 </div>
