--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,15 @@
       <nav class="flex space-x-6 text-blue-600">
         <% if user_signed_in? %>
           <span><%= current_user.email %> さん</span>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "hover:underline" %>
+
+          <!-- ★ Turbo 対応版ログアウト（method: :delete が効かない環境でも確実に動く） -->
+          <%= link_to "ログアウト",
+            destroy_user_session_path,
+            data: { "turbo-method": :delete },
+            method: :delete,
+            rel: "nofollow",
+            class: "hover:underline cursor-pointer" %>
+
         <% else %>
           <%= link_to "ログイン", new_user_session_path, class: "hover:underline" %>
           <%= link_to "新規登録", new_user_registration_path, class: "hover:underline" %>
