--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           <!-- ★ Turbo 対応版ログアウト（method: :delete が効かない環境でも確実に動く） -->
           <%= link_to "ログアウト",
             destroy_user_session_path,
-            data: { "turbo-method": :delete },
+            data: { turbo_method: :delete },
             method: :delete,
             rel: "nofollow",
             class: "hover:underline cursor-pointer" %>
