--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,11 @@
 <div class="text-center mt-10 space-y-4">
-  <h1 class="text-3xl font-bold text-green-700">
-    Lunch de NiceShot
+
+  <h1 class="text-3xl font-bold text-[--color-brandGreen]">
+    Lunch <span class="text-[--color-brandOrange]">de</span> NiceShot
   </h1>
 
-  <p class="text-blue-500">
+  <p class="text-[--color-brandBlue]">
     〜“勝ち飯”が、次のナイスショットを呼ぶ〜
   </p>
+
 </div>
