マイページの表示文言を日本語に修正

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -78,7 +78,7 @@
 
     <% else %>
       <p style="font-size: 0.875rem; color: #6b7280;">
-        まだスコアが登録されていません
+        まだスコアが登録されていません【TEST】 
       </p>
     <% end %>
   </section>
