Fix: ラウンド登録画面のスコア入力復元

--- a/app/views/rounds/new.html.erb
+++ b/app/views/rounds/new.html.erb
@@ -1,3 +1,7 @@
+<p style="color:red; font-weight:bold;">
+  ★ THIS IS NEW ROUND VIEW
+</p>
+
 <div class="max-w-4xl mx-auto px-4">
 
   <h1 class="text-2xl font-bold mb-4">ラウンド登録</h1>
