--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,38 @@
-<h2>Sign up</h2>
+<h2 class="text-xl font-bold mb-4">
+  新規登録
+</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="mb-3">
+    <%= f.label :email, "メールアドレス" %><br>
+    <%= f.email_field :email,
+          autofocus: true,
+          autocomplete: "email",
+          class: "w-full border rounded px-3 py-2" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="mb-1">
+    <%= f.label :password, "パスワード" %><br>
+    <%= f.password_field :password,
+          autocomplete: "new-password",
+          class: "w-full border rounded px-3 py-2" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <p class="text-sm text-gray-500 mt-1">
+    ※ 6文字以上で入力してください
+  </p>
+
+  <div class="mb-3 mt-3">
+    <%= f.label :password_confirmation, "パスワード（確認）" %><br>
+    <%= f.password_field :password_confirmation,
+          autocomplete: "new-password",
+          class: "w-full border rounded px-3 py-2" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="mb-4">
+    <%= f.submit "登録する",
+          class: "w-full bg-[--color-brandGreen] text-white py-2 rounded" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
